2001-04-09  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/shimbun.el (shimbun): Removed `headers' slot.
	(shimbun-retrieve-url-buffer): New function.
	(shimbun-open-group): Don't set up `headers' slot.
	(shimbun-close-group): Don't clean up `headers' slot.
	(shimbun-headers): Retrieve headers using
	`shimbun-retrieve-url-buffer'.

2001-04-09  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-key-binding): New user option.
	(w3m-lynx-like-map, w3m-info-like-map): New keymaps.
	(w3m): Refer w3m-key-binding, to decide whether keymap is used.

2001-04-06  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-ding.el: New file.

	* shimbun/sb-xemacs.el (shimbun-get-headers): Generate pattern
	from index-url.

	* shimbun/sb-mhonarc.el (shimbun-make-contents): Always insert
	Content-Type.

	* shimbun/sb-zdnet.el: Add `gemespot' support.

	* shimbun/sb-emacs-w3m.el: Removed.

2001-04-06  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/shimbun.el (shimbun-mua): Added slot `shimbun'.
	Define internal accessor.
	(shimbun-open): Setup shimbun slot.

2001-04-06  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-edit-current-url): New command.
	(w3m-mode-map): `w3m-edit-current-url' is registered.
	(w3m-save-this-url): Removed.
	(w3m-decode-encoded-buffer): Use `w3m-which-command' in order to
	find appropriate command in Windows.

2001-04-05  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-xemacs.el (shimbun-get-headers): Examine
	use-entire-index slot and use shimbun-search-id.
	(shimbun-xemacs-coding-system): Fixed redundant definition.

2001-04-05  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* Makefile.in (default): Depends `Makefile'.
	(Makefile): Removed `--recheck' option in order to re-create
	itself when `Makefile.in' or `config.status' is updated.

2001-04-05  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (top): Define w3m-read-coding-system().